--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,8 @@
   "name": "task-manager",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "author": "Deepak Thomas",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
