--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "Task Manager - GEM-R",
+    "slug": "task-manager-gem-r",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "frontend",
+    "scheme": "task-manager",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
